--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+
+<!--ATTN: This particular spec: iPhone X-->
+
+<!--copy content attribute: bloc/thinkful -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
